PRO-0-1-0 : refactor, documentation, unit test, basic example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "promotion_kit"
 version = "0.1.0"
 edition = "2024"
 authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
-description = "A powerful Rust toolkit for dynamic promotion management and integration."
+description = "A powerful Rust toolkit for managing dynamic promotions with flexible rules and seamless integration."
 license = "Apache-2.0"
 repository = "https://github.com/jerry-maheswara-github/promotion_kit"
 documentation = "https://docs.rs/promotion_kit"
